{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 274,
  "lineage": "80e21798-92a3-f85a-7845-bebc29e919d5",
  "resources": [
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:055111818145:loadbalancer/app/auto-healing-web-tier-alb/a1e3cc586ee52938",
            "arn_suffix": "app/auto-healing-web-tier-alb/a1e3cc586ee52938",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "auto-healing-web-tier-alb-1834557822.ap-southeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:055111818145:loadbalancer/app/auto-healing-web-tier-alb/a1e3cc586ee52938",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "auto-healing-web-tier-alb",
            "preserve_host_header": false,
            "region": "ap-southeast-2",
            "security_groups": [
              "sg-086666b6ee3e4b8b2"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0571d15492ae4f0ae"
              },
              {
                "subnet_id": "subnet-05853fdac2ee09954"
              }
            ],
            "subnets": [
              "subnet-0571d15492ae4f0ae",
              "subnet-05853fdac2ee09954"
            ],
            "tags": {
              "Name": "auto-healing-web-tier-alb"
            },
            "tags_all": {
              "Name": "auto-healing-web-tier-alb"
            },
            "vpc_id": "vpc-09f7aa011eaabcd73",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1GM3OXH4ZPM65"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:055111818145:loadbalancer/app/auto-healing-web-tier-alb/a1e3cc586ee52938"
          },
          "dependencies": [
            "module.load_balancer.aws_security_group.alb_sg",
            "module.network.aws_subnet.public_a",
            "module.network.aws_subnet.public_b",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:055111818145:listener/app/auto-healing-web-tier-alb/a1e3cc586ee52938/6a99ab36319d92ee",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:055111818145:targetgroup/auto-healing-web-tier-tg/c296a008f51a1dcc",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:055111818145:listener/app/auto-healing-web-tier-alb/a1e3cc586ee52938/6a99ab36319d92ee",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:055111818145:loadbalancer/app/auto-healing-web-tier-alb/a1e3cc586ee52938",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-southeast-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:055111818145:listener/app/auto-healing-web-tier-alb/a1e3cc586ee52938/6a99ab36319d92ee"
          },
          "dependencies": [
            "module.load_balancer.aws_lb.alb",
            "module.load_balancer.aws_lb_target_group.tg",
            "module.load_balancer.aws_security_group.alb_sg",
            "module.network.aws_subnet.public_a",
            "module.network.aws_subnet.public_b",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:055111818145:targetgroup/auto-healing-web-tier-tg/c296a008f51a1dcc",
            "arn_suffix": "targetgroup/auto-healing-web-tier-tg/c296a008f51a1dcc",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:055111818145:targetgroup/auto-healing-web-tier-tg/c296a008f51a1dcc",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-2:055111818145:loadbalancer/app/auto-healing-web-tier-alb/a1e3cc586ee52938"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "auto-healing-web-tier-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-southeast-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "auto-healing-web-tier-tg"
            },
            "tags_all": {
              "Name": "auto-healing-web-tier-tg"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09f7aa011eaabcd73"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:055111818145:targetgroup/auto-healing-web-tier-tg/c296a008f51a1dcc"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:055111818145:security-group/sg-086666b6ee3e4b8b2",
            "description": "Allow inbound HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-086666b6ee3e4b8b2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "auto-healing-web-tier-alb-sg",
            "name_prefix": "",
            "owner_id": "055111818145",
            "region": "ap-southeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "auto-healing-web-tier-alb-sg"
            },
            "tags_all": {
              "Name": "auto-healing-web-tier-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09f7aa011eaabcd73"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "055111818145",
            "id": "sg-086666b6ee3e4b8b2",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:055111818145:internet-gateway/igw-0be005ad5d52abd29",
            "id": "igw-0be005ad5d52abd29",
            "owner_id": "055111818145",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "auto-healing-web-tier-igw"
            },
            "tags_all": {
              "Name": "auto-healing-web-tier-igw"
            },
            "vpc_id": "vpc-09f7aa011eaabcd73"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "055111818145",
            "id": "igw-0be005ad5d52abd29",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:055111818145:route-table/rtb-0312932a5530327b7",
            "id": "rtb-0312932a5530327b7",
            "owner_id": "055111818145",
            "propagating_vgws": [],
            "region": "ap-southeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0be005ad5d52abd29",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "auto-healing-web-tier-public-rt"
            },
            "tags_all": {
              "Name": "auto-healing-web-tier-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-09f7aa011eaabcd73"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "055111818145",
            "id": "rtb-0312932a5530327b7",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-048ea2d01fd5a2e97",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-0312932a5530327b7",
            "subnet_id": "subnet-0571d15492ae4f0ae"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "055111818145",
            "id": "rtbassoc-048ea2d01fd5a2e97",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public_rt",
            "module.network.aws_subnet.public_a",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ffd813285a1834bf",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-0312932a5530327b7",
            "subnet_id": "subnet-05853fdac2ee09954"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "055111818145",
            "id": "rtbassoc-0ffd813285a1834bf",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public_rt",
            "module.network.aws_subnet.public_b",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:055111818145:security-group/sg-0a5521f4f6f3566b2",
            "description": "Allow traffic from ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a5521f4f6f3566b2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow HTTP from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-086666b6ee3e4b8b2"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "auto-healing-web-tier-ec2-sg",
            "name_prefix": "",
            "owner_id": "055111818145",
            "region": "ap-southeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "auto-healing-web-tier-ec2-sg"
            },
            "tags_all": {
              "Name": "auto-healing-web-tier-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09f7aa011eaabcd73"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "055111818145",
            "id": "sg-0a5521f4f6f3566b2",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "module.load_balancer.aws_security_group.alb_sg",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:055111818145:subnet/subnet-0571d15492ae4f0ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0571d15492ae4f0ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "055111818145",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "auto-healing-web-tier-public-a"
            },
            "tags_all": {
              "Name": "auto-healing-web-tier-public-a"
            },
            "vpc_id": "vpc-09f7aa011eaabcd73"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "055111818145",
            "id": "subnet-0571d15492ae4f0ae",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:055111818145:subnet/subnet-05853fdac2ee09954",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05853fdac2ee09954",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "055111818145",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "auto-healing-web-tier-public-b"
            },
            "tags_all": {
              "Name": "auto-healing-web-tier-public-b"
            },
            "vpc_id": "vpc-09f7aa011eaabcd73"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "055111818145",
            "id": "subnet-05853fdac2ee09954",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:055111818145:vpc/vpc-09f7aa011eaabcd73",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03f5e71c2e4e020dc",
            "default_route_table_id": "rtb-0e495d8dcbe2069a3",
            "default_security_group_id": "sg-07aea74886081b938",
            "dhcp_options_id": "dopt-02a5bdcb1595d3d1b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09f7aa011eaabcd73",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e495d8dcbe2069a3",
            "owner_id": "055111818145",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "auto-healing-web-tier-vpc"
            },
            "tags_all": {
              "Name": "auto-healing-web-tier-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "055111818145",
            "id": "vpc-09f7aa011eaabcd73",
            "region": "ap-southeast-2"
          }
        }
      ]
    }
  ]
}